--- a/style.css
+++ b/style.css
@@ -6,8 +6,11 @@ body {
 ul {
 list-style: none;
 padding-left: 0;
-line-height: 150%;
-  } 
+} 
+
+li {
+  line-height: 150%;
+}
 
 a { 
 color: black; 
