--- a/style.css
+++ b/style.css
@@ -4,13 +4,10 @@ body {
 }
 
 ul {
-list-style: none;
+line-height: 150%;
 padding-left: 0;
+list-style: none;
 } 
-
-li{
-  margin-bottom: 1em;
-}
 
 a { 
 color: black; 
